@@ -5,7 +5,7 @@ REM You can specify the asset path with _export_as_tga.bat or _set_asset_path.ba
 @if "%~1"=="" goto skip
 
 @pushd %~dp0
-python\python.exe src\main.py src\_file_path_.txt "%~1" --save_folder=injected --skip_non_texture --image_filter=cubic
+python\python.exe -E src\main.py src\_file_path_.txt "%~1" --save_folder=injected --skip_non_texture --image_filter=cubic
 @popd
 
 pause
