@@ -4,7 +4,7 @@ REM Copy texture assets to ./copied (ignore non-texture assets)
 @if "%~1"=="" goto skip
 
 @pushd %~dp0
-python\python.exe src\main.py "%~1" --mode=copy --save_folder=copied
+python\python.exe -E src\main.py "%~1" --mode=copy --save_folder=copied
 @popd
 
 pause
