@@ -1,4 +1,5 @@
 ver 0.5.4
+- Fixed a bug that the portable python can refer the installed python with some environment variables.
 - Updated GUI to v0.5.1
 
 ver 0.5.3
